#Lacking creations of StreamSources and StreamPaths

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,20 +13,52 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true">
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Source:"
+                    android:id="@+id/sourceLbl" android:layout_weight="1"/>
+            <Spinner
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/sourceSpinner" android:spinnerMode="dropdown" android:layout_weight="1"/>
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/sourceStateLbl" android:layout_weight="1"/>
+        </LinearLayout>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Output Path:"
+                    android:id="@+id/pathLbl" android:layout_weight="1"/>
+            <Spinner
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pathSpinner" android:spinnerMode="dropdown" android:layout_weight="1"/>
+            <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/pathStateLbl" android:layout_weight="1"/>
+        </LinearLayout>
         <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:id="@+id/ipTxt" android:layout_gravity="center_horizontal" android:inputType="text"
-                android:text="192.168.0.107"/>
+                android:text="192.168.0.107" android:textAlignment="center" android:hint="Socket IP Address"/>
         <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Connect"
                 android:id="@+id/connectBtn" android:layout_gravity="center_horizontal"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/bleStatusLbl"/>
     </LinearLayout>
 </RelativeLayout>
